2000-05-08  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (T-gnus): Update to 6.14.4.

	* README.T-gnus: Update.

	* lisp/{webmail.el,rfc2047.el,nnmbox.el,nndoc.el,mml.el,mm-view.el,
	mm-partial.el,mm-decode.el,mm-bodies.el,message.el,lpath.el,
	gnus.el,gnus-vers.el,gnus-util.el,gnus-start.el,gnus-score.el,
	gnus-msg.el,gnus-mailcap.el,gnus-ems.el,gnus-draft.el,gnus-art.el,
	ChangeLog}: Sync up with Gnus v5.8.6.
	* texi/{postamble.tex,message.texi,message-ja.texi,gnusref.tex,
	gnus.texi,gnus-ja.texi,emacs-mime.texi,Makefile.in,ChangeLog}: Sync
	up with Gnus v5.8.6.

2000-04-28  Katsumi Yamaoka <yamaoka@jpl.org>

	* texi/gnus.texi, texi/gnus-ja.texi, texi/gnus-faq-ja.texi, README:
	You might be able to use T-gnus with the versions of XEmacs prior
	to 21.1.1.

	* contrib/timer.el: New file. Imported from fsf-compat-1.07-pkg.

2000-04-27  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/mm-view.el (gnus-article-mime-handles): Don't bind it.

	* lisp/gnus-sum.el (gnus-article-mime-handles): Restore from Gnus.
	(gnus-article-decoded-p): Ditto.

	* lisp/gnus-art.el (gnus-article-mime-handles): Don't bind it.
	(gnus-article-decoded-p): Ditto.

2000-04-25  NAKAJI Hiroyuki  <nakaji@tutrp.tut.ac.jp>

	* lisp/dgnushack.el: Add code to avoid mule-2.3@19.34 failing to
	make info from texi. Thanks to Hayashi-san.

2000-04-25  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/dgnushack.el (union, member-if, mapcon, last): Remove
	compiler macros.

2000-04-24  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (T-gnus): Update to 6.14.3.

	* README.T-gnus: Update.

	* GNUS-NEWS: Sync up with Gnus v5.8.5.
	* lisp/{webmail.el,utf7.el,time-date.el,smiley.el,rfc2047.el,
	rfc1843.el,qp.el,pop3.el,parse-time.el,nnweb.el,nnwarchive.el,
	nnvirtual.el,nnultimate.el,nntp.el,nnspool.el,nnslashdot.el,
	nnml.el,nnmail.el,nnimap.el,nnheader.el,nnfolder.el,nndraft.el,
	nndoc.el,nnagent.el,mml.el,mm-view.el,mm-uu.el,mm-util.el,
	mm-encode.el,mm-decode.el,mm-bodies.el,message.el,mail-source.el,